# behance_downloader

./: .gitignore  Makefile  README.md  google-com.html  pyproject.toml  setup.cfg  www-behance-net-.txt
.github/workflows/: linter-check.yml
page_loader/: __init__.py
page_loader/additionals/: additional_files_downloader.py  additional_functions.py  replacers.py
page_loader/cli/: cli.py
page_loader/page_loader/: page_loader.py
page_loader/scripts/: page-loader_script.py  page_loader.py
tests/: test.py  test_page_loader.py  test_page_with_img.py  test_single_page_loader.py
tests/fixtures/results/: guides_hexlet_io.txt
tests/fixtures/results/result_2/: style.css
