[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page-loader"
authors = ["DmitriyChebruchan <chebruchan2707@gmail.com>"]
packages = [
    {include = "page_loader"}
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^4.0.1"
requests = "^2.27.1"
pook = "^1.0.2"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
