[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page-loader"
authors = ["DmitriyChebruchan <chebruchan2707@gmail.com>"]
packages = [
    {include = "page_loader"}
]

[tool.poetry.dependencies]
python = "^3.9.12"
flake8 = "^5.0.3"
requests = "^2.28.1"
pook = "^1.0.2"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"
autopep8 = "^1.6.0"
selenium = "^4.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
